stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_checker_lowering_pipeline.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_checker_lowering_pipeline.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
3
3
2
3
1
3
stderr:
<empty>
