stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_checker_module_snapshot.snap
---
source: tests/fixtures.rs
assertion_line: 5104
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_checker_module_snapshot.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
4
8
9
22
25
15
16
3
Lowering:lowered
stderr:
<empty>
