stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_constructor_result_inference.snap
---
source: tests/fixtures.rs
assertion_line: 1994
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_constructor_result_inference.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
Options.Some payload infers Options.option<Boxes.box<i64>>
stderr:
<empty>
