stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_control_flow_boundaries.snap
---
source: tests/fixtures.rs
assertion_line: 4782
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_control_flow_boundaries.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
recursion:supported:lowered as calls;while:supported:parses to loop blocks;match:supported:lowers to branches;receive:supported:actor scheduler boundary
stderr:
<empty>
