stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_diagnostic_module_snapshot.snap
---
source: tests/fixtures.rs
assertion_line: 5104
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_diagnostic_module_snapshot.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
4
23
25
18
40
37
1
BackendDiag:needs-snapshot
stderr:
<empty>
