stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_emit_plan.snap
---
source: tests/fixtures.rs
assertion_line: 5104
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_emit_plan.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
1
3
2
1
1
stderr:
<empty>
