stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_expected_types.snap
---
source: tests/fixtures.rs
assertion_line: 1431
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_expected_types.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
if condition expects Bool but got i64; logical expression expects Bool but got String; arithmetic expression expects i64 but got Bool; match arm expects matching types but got String
stderr:
<empty>
